# wwidgt

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md
src/: daemon.c  daemon.h  ipc.c  ipc.h  main.c
src/ui/: arc_progress_bar.c  arc_progress_bar.h  button.c  button.h  clock.c  clock.h  image.c  image.h  label.c  label.h  linear_progress_bar.c  linear_progress_bar.h  music_player.c  music_player.h  power_options.c  power_options.h  profile_widget.c  profile_widget.h  system_utilisation.c  system_utilisation.h
src/utils/: color.c  color.h  config_path.c  config_path.h  css_loader.c  css_loader.h  file_monitor.c  file_monitor.h  layout_parser.c  layout_parser.h  logging.c  logging.h  music_controls.c  music_controls.h  process_str.c  process_str.h  string_manip.c  string_manip.h  variables.c  variables.h
